# urbot_agent

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  db.py  main.py  models.py  tui.py
app/agent/: __init__.py  conversation.py  llm_client.py  mission_planner.py  planner.py  prompts.py  tools.py
app/api/: routes_agent.py  routes_locations.py  routes_missions.py  routes_robot.py  routes_tasks.py  schemas.py
app/robot/: __init__.py  locations.py  mission_manager.py  profiles.py  safety.py  state_manager.py  task_manager.py
app/static/: dashboard.js
app/templates/: dashboard.html
app/water/: __init__.py  client.py  normalizer.py  schemas.py
docs/: OVERVIEW.md  TUI.md
scripts/: smoke_test_robot.py  sync_markers.py
tests/: test_api.py  test_chargers.py  test_conversation.py  test_llm_client.py  test_locations.py  test_missions.py  test_normalizer.py  test_safety.py  test_state_manager.py  test_task_manager.py  test_tui.py  test_water_client.py
