[project]
name = "alex-agent"
version = "0.1.0"
description = "Local FastAPI orchestrator for a single WATER robot."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.30",
  "uvicorn[standard]>=0.30.0",
  "textual>=0.60.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
alexagent = "app.tui:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
